ProjetoBase/compilador.output
Terminals unused in grammar

    PROCEDURE
    FUNCTION
    IF
    THEN
    ELSE
    LABEL
    TYPE
    ARRAY
    OF
    GOTO
    ABRE_COLCHETES
    FECHA_COLCHETES
    ABRE_CHAVES
    FECHA_CHAVES


Grammar

    0 $accept: programa $end

    1 $@1: ε

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    3 $@2: ε

    4 $@3: ε

    5 bloco: parte_declara_vars $@2 $@3 comando_composto

    6 $@4: ε

    7 parte_declara_vars: $@4 VAR declara_vars
    8                   | ε

    9 declara_vars: declara_vars declara_var
   10             | declara_var

   11 $@5: ε

   12 $@6: ε

   13 declara_var: $@5 lista_id_var DOIS_PONTOS tipo $@6 PONTO_E_VIRGULA

   14 tipo: TIPO

   15 lista_id_var: lista_id_var VIRGULA IDENT
   16             | IDENT

   17 lista_idents: lista_idents VIRGULA IDENT
   18             | IDENT

   19 comando_composto: T_BEGIN comandos T_END

   20 comandos: comandos PONTO_E_VIRGULA comando
   21         | comando

   22 comando: comando_sem_rotulo

   23 comando_sem_rotulo: atribuicao
   24                   | comando_composto
   25                   | leitura
   26                   | escrita
   27                   | comando_repetitivo
   28                   | ε

   29 leitura: READ ABRE_PARENTESES leitura_itens FECHA_PARENTESES

   30 leitura_itens: leitura_itens VIRGULA item_leitura
   31              | item_leitura

   32 item_leitura: IDENT

   33 escrita: WRITE ABRE_PARENTESES escrita_itens FECHA_PARENTESES

   34 escrita_itens: escrita_itens VIRGULA item_escrita
   35              | item_escrita

   36 item_escrita: expressao

   37 atribuicao: variavel ATRIBUICAO expressao

   38 $@7: ε

   39 $@8: ε

   40 comando_repetitivo: WHILE $@7 expressao $@8 DO comando_sem_rotulo

   41 expressao: expressao_simples
   42          | expressao_simples relacao expressao_simples

   43 relacao: IGUAL
   44        | DIFERENTE
   45        | MENOR
   46        | MENOR_IGUAL
   47        | MAIOR
   48        | MAIOR_IGUAL

   49 expressao_simples: expressao_simples mais_menos_or termo
   50                  | mais_menos_ou_nada termo

   51 mais_menos_ou_nada: MAIS
   52                   | MENOS
   53                   | ε

   54 mais_menos_or: MAIS
   55              | MENOS
   56              | OR

   57 termo: termo vezes_div_and fator
   58      | fator

   59 vezes_div_and: VEZES
   60              | DIV
   61              | AND

   62 fator: variavel
   63      | NUMERO
   64      | VALOR_BOOL
   65      | ABRE_PARENTESES expressao FECHA_PARENTESES
   66      | NOT fator

   67 variavel: IDENT


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    PROGRAM (258) 2
    ABRE_PARENTESES (259) 2 29 33 65
    FECHA_PARENTESES (260) 2 29 33 65
    VIRGULA (261) 15 17 30 34
    PONTO_E_VIRGULA (262) 2 13 20
    DOIS_PONTOS (263) 13
    PONTO (264) 2
    T_BEGIN (265) 19
    T_END (266) 19
    VAR (267) 7
    IDENT (268) 2 15 16 17 18 32 67
    ATRIBUICAO (269) 37
    TIPO (270) 14
    PROCEDURE (271)
    FUNCTION (272)
    IGUAL (273) 43
    MENOR (274) 45
    MENOR_IGUAL (275) 46
    MAIOR (276) 47
    MAIOR_IGUAL (277) 48
    DIFERENTE (278) 44
    AND (279) 61
    OR (280) 56
    NOT (281) 66
    DIV (282) 60
    VEZES (283) 59
    MENOS (284) 52 55
    MAIS (285) 51 54
    IF (286)
    THEN (287)
    ELSE (288)
    WHILE (289) 40
    DO (290) 40
    READ (291) 29
    WRITE (292) 33
    NUMERO (293) 63
    VALOR_BOOL (294) 64
    LABEL (295)
    TYPE (296)
    ARRAY (297)
    OF (298)
    GOTO (299)
    ABRE_COLCHETES (300)
    FECHA_COLCHETES (301)
    ABRE_CHAVES (302)
    FECHA_CHAVES (303)


Nonterminals, with rules where they appear

    $accept (49)
        on left: 0
    programa (50)
        on left: 2
        on right: 0
    $@1 (51)
        on left: 1
        on right: 2
    bloco (52)
        on left: 5
        on right: 2
    $@2 (53)
        on left: 3
        on right: 5
    $@3 (54)
        on left: 4
        on right: 5
    parte_declara_vars (55)
        on left: 7 8
        on right: 5
    $@4 (56)
        on left: 6
        on right: 7
    declara_vars (57)
        on left: 9 10
        on right: 7 9
    declara_var (58)
        on left: 13
        on right: 9 10
    $@5 (59)
        on left: 11
        on right: 13
    $@6 (60)
        on left: 12
        on right: 13
    tipo <int_val> (61)
        on left: 14
        on right: 13
    lista_id_var (62)
        on left: 15 16
        on right: 13 15
    lista_idents (63)
        on left: 17 18
        on right: 2 17
    comando_composto (64)
        on left: 19
        on right: 5 24
    comandos (65)
        on left: 20 21
        on right: 19 20
    comando (66)
        on left: 22
        on right: 20 21
    comando_sem_rotulo (67)
        on left: 23 24 25 26 27 28
        on right: 22 40
    leitura (68)
        on left: 29
        on right: 25
    leitura_itens (69)
        on left: 30 31
        on right: 29 30
    item_leitura (70)
        on left: 32
        on right: 30 31
    escrita (71)
        on left: 33
        on right: 26
    escrita_itens (72)
        on left: 34 35
        on right: 33 34
    item_escrita (73)
        on left: 36
        on right: 34 35
    atribuicao <int_val> (74)
        on left: 37
        on right: 23
    comando_repetitivo (75)
        on left: 40
        on right: 27
    $@7 (76)
        on left: 38
        on right: 40
    $@8 (77)
        on left: 39
        on right: 40
    expressao <int_val> (78)
        on left: 41 42
        on right: 36 37 40 65
    relacao <str> (79)
        on left: 43 44 45 46 47 48
        on right: 42
    expressao_simples <int_val> (80)
        on left: 49 50
        on right: 41 42 49
    mais_menos_ou_nada <str> (81)
        on left: 51 52 53
        on right: 50
    mais_menos_or <str> (82)
        on left: 54 55 56
        on right: 49
    termo <int_val> (83)
        on left: 57 58
        on right: 49 50 57
    vezes_div_and <str> (84)
        on left: 59 60 61
        on right: 57
    fator <int_val> (85)
        on left: 62 63 64 65 66
        on right: 57 58 66
    variavel (86)
        on left: 67
        on right: 37 62


State 0

    0 $accept: • programa $end

    $default  reduce using rule 1 ($@1)

    programa  go to state 1
    $@1       go to state 2


State 1

    0 $accept: programa • $end

    $end  shift, and go to state 3


State 2

    2 programa: $@1 • PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    PROGRAM  shift, and go to state 4


State 3

    0 $accept: programa $end •

    $default  accept


State 4

    2 programa: $@1 PROGRAM • IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    IDENT  shift, and go to state 5


State 5

    2 programa: $@1 PROGRAM IDENT • ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    ABRE_PARENTESES  shift, and go to state 6


State 6

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES • lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    IDENT  shift, and go to state 7

    lista_idents  go to state 8


State 7

   18 lista_idents: IDENT •

    $default  reduce using rule 18 (lista_idents)


State 8

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents • FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO
   17 lista_idents: lista_idents • VIRGULA IDENT

    FECHA_PARENTESES  shift, and go to state 9
    VIRGULA           shift, and go to state 10


State 9

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES • PONTO_E_VIRGULA bloco PONTO

    PONTO_E_VIRGULA  shift, and go to state 11


State 10

   17 lista_idents: lista_idents VIRGULA • IDENT

    IDENT  shift, and go to state 12


State 11

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA • bloco PONTO

    T_BEGIN   reduce using rule 8 (parte_declara_vars)
    $default  reduce using rule 6 ($@4)

    bloco               go to state 13
    parte_declara_vars  go to state 14
    $@4                 go to state 15


State 12

   17 lista_idents: lista_idents VIRGULA IDENT •

    $default  reduce using rule 17 (lista_idents)


State 13

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco • PONTO

    PONTO  shift, and go to state 16


State 14

    5 bloco: parte_declara_vars • $@2 $@3 comando_composto

    $default  reduce using rule 3 ($@2)

    $@2  go to state 17


State 15

    7 parte_declara_vars: $@4 • VAR declara_vars

    VAR  shift, and go to state 18


State 16

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO •

    $default  reduce using rule 2 (programa)


State 17

    5 bloco: parte_declara_vars $@2 • $@3 comando_composto

    $default  reduce using rule 4 ($@3)

    $@3  go to state 19


State 18

    7 parte_declara_vars: $@4 VAR • declara_vars

    $default  reduce using rule 11 ($@5)

    declara_vars  go to state 20
    declara_var   go to state 21
    $@5           go to state 22


State 19

    5 bloco: parte_declara_vars $@2 $@3 • comando_composto

    T_BEGIN  shift, and go to state 23

    comando_composto  go to state 24


State 20

    7 parte_declara_vars: $@4 VAR declara_vars •
    9 declara_vars: declara_vars • declara_var

    IDENT     reduce using rule 11 ($@5)
    $default  reduce using rule 7 (parte_declara_vars)

    declara_var  go to state 25
    $@5          go to state 22


State 21

   10 declara_vars: declara_var •

    $default  reduce using rule 10 (declara_vars)


State 22

   13 declara_var: $@5 • lista_id_var DOIS_PONTOS tipo $@6 PONTO_E_VIRGULA

    IDENT  shift, and go to state 26

    lista_id_var  go to state 27


State 23

   19 comando_composto: T_BEGIN • comandos T_END

    T_BEGIN  shift, and go to state 23
    IDENT    shift, and go to state 28
    WHILE    shift, and go to state 29
    READ     shift, and go to state 30
    WRITE    shift, and go to state 31

    $default  reduce using rule 28 (comando_sem_rotulo)

    comando_composto    go to state 32
    comandos            go to state 33
    comando             go to state 34
    comando_sem_rotulo  go to state 35
    leitura             go to state 36
    escrita             go to state 37
    atribuicao          go to state 38
    comando_repetitivo  go to state 39
    variavel            go to state 40


State 24

    5 bloco: parte_declara_vars $@2 $@3 comando_composto •

    $default  reduce using rule 5 (bloco)


State 25

    9 declara_vars: declara_vars declara_var •

    $default  reduce using rule 9 (declara_vars)


State 26

   16 lista_id_var: IDENT •

    $default  reduce using rule 16 (lista_id_var)


State 27

   13 declara_var: $@5 lista_id_var • DOIS_PONTOS tipo $@6 PONTO_E_VIRGULA
   15 lista_id_var: lista_id_var • VIRGULA IDENT

    VIRGULA      shift, and go to state 41
    DOIS_PONTOS  shift, and go to state 42


State 28

   67 variavel: IDENT •

    $default  reduce using rule 67 (variavel)


State 29

   40 comando_repetitivo: WHILE • $@7 expressao $@8 DO comando_sem_rotulo

    $default  reduce using rule 38 ($@7)

    $@7  go to state 43


State 30

   29 leitura: READ • ABRE_PARENTESES leitura_itens FECHA_PARENTESES

    ABRE_PARENTESES  shift, and go to state 44


State 31

   33 escrita: WRITE • ABRE_PARENTESES escrita_itens FECHA_PARENTESES

    ABRE_PARENTESES  shift, and go to state 45


State 32

   24 comando_sem_rotulo: comando_composto •

    $default  reduce using rule 24 (comando_sem_rotulo)


State 33

   19 comando_composto: T_BEGIN comandos • T_END
   20 comandos: comandos • PONTO_E_VIRGULA comando

    PONTO_E_VIRGULA  shift, and go to state 46
    T_END            shift, and go to state 47


State 34

   21 comandos: comando •

    $default  reduce using rule 21 (comandos)


State 35

   22 comando: comando_sem_rotulo •

    $default  reduce using rule 22 (comando)


State 36

   25 comando_sem_rotulo: leitura •

    $default  reduce using rule 25 (comando_sem_rotulo)


State 37

   26 comando_sem_rotulo: escrita •

    $default  reduce using rule 26 (comando_sem_rotulo)


State 38

   23 comando_sem_rotulo: atribuicao •

    $default  reduce using rule 23 (comando_sem_rotulo)


State 39

   27 comando_sem_rotulo: comando_repetitivo •

    $default  reduce using rule 27 (comando_sem_rotulo)


State 40

   37 atribuicao: variavel • ATRIBUICAO expressao

    ATRIBUICAO  shift, and go to state 48


State 41

   15 lista_id_var: lista_id_var VIRGULA • IDENT

    IDENT  shift, and go to state 49


State 42

   13 declara_var: $@5 lista_id_var DOIS_PONTOS • tipo $@6 PONTO_E_VIRGULA

    TIPO  shift, and go to state 50

    tipo  go to state 51


State 43

   40 comando_repetitivo: WHILE $@7 • expressao $@8 DO comando_sem_rotulo

    MENOS  shift, and go to state 52
    MAIS   shift, and go to state 53

    $default  reduce using rule 53 (mais_menos_ou_nada)

    expressao           go to state 54
    expressao_simples   go to state 55
    mais_menos_ou_nada  go to state 56


State 44

   29 leitura: READ ABRE_PARENTESES • leitura_itens FECHA_PARENTESES

    IDENT  shift, and go to state 57

    leitura_itens  go to state 58
    item_leitura   go to state 59


State 45

   33 escrita: WRITE ABRE_PARENTESES • escrita_itens FECHA_PARENTESES

    MENOS  shift, and go to state 52
    MAIS   shift, and go to state 53

    $default  reduce using rule 53 (mais_menos_ou_nada)

    escrita_itens       go to state 60
    item_escrita        go to state 61
    expressao           go to state 62
    expressao_simples   go to state 55
    mais_menos_ou_nada  go to state 56


State 46

   20 comandos: comandos PONTO_E_VIRGULA • comando

    T_BEGIN  shift, and go to state 23
    IDENT    shift, and go to state 28
    WHILE    shift, and go to state 29
    READ     shift, and go to state 30
    WRITE    shift, and go to state 31

    $default  reduce using rule 28 (comando_sem_rotulo)

    comando_composto    go to state 32
    comando             go to state 63
    comando_sem_rotulo  go to state 35
    leitura             go to state 36
    escrita             go to state 37
    atribuicao          go to state 38
    comando_repetitivo  go to state 39
    variavel            go to state 40


State 47

   19 comando_composto: T_BEGIN comandos T_END •

    $default  reduce using rule 19 (comando_composto)


State 48

   37 atribuicao: variavel ATRIBUICAO • expressao

    MENOS  shift, and go to state 52
    MAIS   shift, and go to state 53

    $default  reduce using rule 53 (mais_menos_ou_nada)

    expressao           go to state 64
    expressao_simples   go to state 55
    mais_menos_ou_nada  go to state 56


State 49

   15 lista_id_var: lista_id_var VIRGULA IDENT •

    $default  reduce using rule 15 (lista_id_var)


State 50

   14 tipo: TIPO •

    $default  reduce using rule 14 (tipo)


State 51

   13 declara_var: $@5 lista_id_var DOIS_PONTOS tipo • $@6 PONTO_E_VIRGULA

    $default  reduce using rule 12 ($@6)

    $@6  go to state 65


State 52

   52 mais_menos_ou_nada: MENOS •

    $default  reduce using rule 52 (mais_menos_ou_nada)


State 53

   51 mais_menos_ou_nada: MAIS •

    $default  reduce using rule 51 (mais_menos_ou_nada)


State 54

   40 comando_repetitivo: WHILE $@7 expressao • $@8 DO comando_sem_rotulo

    $default  reduce using rule 39 ($@8)

    $@8  go to state 66


State 55

   41 expressao: expressao_simples •
   42          | expressao_simples • relacao expressao_simples
   49 expressao_simples: expressao_simples • mais_menos_or termo

    IGUAL        shift, and go to state 67
    MENOR        shift, and go to state 68
    MENOR_IGUAL  shift, and go to state 69
    MAIOR        shift, and go to state 70
    MAIOR_IGUAL  shift, and go to state 71
    DIFERENTE    shift, and go to state 72
    OR           shift, and go to state 73
    MENOS        shift, and go to state 74
    MAIS         shift, and go to state 75

    $default  reduce using rule 41 (expressao)

    relacao        go to state 76
    mais_menos_or  go to state 77


State 56

   50 expressao_simples: mais_menos_ou_nada • termo

    ABRE_PARENTESES  shift, and go to state 78
    IDENT            shift, and go to state 28
    NOT              shift, and go to state 79
    NUMERO           shift, and go to state 80
    VALOR_BOOL       shift, and go to state 81

    termo     go to state 82
    fator     go to state 83
    variavel  go to state 84


State 57

   32 item_leitura: IDENT •

    $default  reduce using rule 32 (item_leitura)


State 58

   29 leitura: READ ABRE_PARENTESES leitura_itens • FECHA_PARENTESES
   30 leitura_itens: leitura_itens • VIRGULA item_leitura

    FECHA_PARENTESES  shift, and go to state 85
    VIRGULA           shift, and go to state 86


State 59

   31 leitura_itens: item_leitura •

    $default  reduce using rule 31 (leitura_itens)


State 60

   33 escrita: WRITE ABRE_PARENTESES escrita_itens • FECHA_PARENTESES
   34 escrita_itens: escrita_itens • VIRGULA item_escrita

    FECHA_PARENTESES  shift, and go to state 87
    VIRGULA           shift, and go to state 88


State 61

   35 escrita_itens: item_escrita •

    $default  reduce using rule 35 (escrita_itens)


State 62

   36 item_escrita: expressao •

    $default  reduce using rule 36 (item_escrita)


State 63

   20 comandos: comandos PONTO_E_VIRGULA comando •

    $default  reduce using rule 20 (comandos)


State 64

   37 atribuicao: variavel ATRIBUICAO expressao •

    $default  reduce using rule 37 (atribuicao)


State 65

   13 declara_var: $@5 lista_id_var DOIS_PONTOS tipo $@6 • PONTO_E_VIRGULA

    PONTO_E_VIRGULA  shift, and go to state 89


State 66

   40 comando_repetitivo: WHILE $@7 expressao $@8 • DO comando_sem_rotulo

    DO  shift, and go to state 90


State 67

   43 relacao: IGUAL •

    $default  reduce using rule 43 (relacao)


State 68

   45 relacao: MENOR •

    $default  reduce using rule 45 (relacao)


State 69

   46 relacao: MENOR_IGUAL •

    $default  reduce using rule 46 (relacao)


State 70

   47 relacao: MAIOR •

    $default  reduce using rule 47 (relacao)


State 71

   48 relacao: MAIOR_IGUAL •

    $default  reduce using rule 48 (relacao)


State 72

   44 relacao: DIFERENTE •

    $default  reduce using rule 44 (relacao)


State 73

   56 mais_menos_or: OR •

    $default  reduce using rule 56 (mais_menos_or)


State 74

   55 mais_menos_or: MENOS •

    $default  reduce using rule 55 (mais_menos_or)


State 75

   54 mais_menos_or: MAIS •

    $default  reduce using rule 54 (mais_menos_or)


State 76

   42 expressao: expressao_simples relacao • expressao_simples

    MENOS  shift, and go to state 52
    MAIS   shift, and go to state 53

    $default  reduce using rule 53 (mais_menos_ou_nada)

    expressao_simples   go to state 91
    mais_menos_ou_nada  go to state 56


State 77

   49 expressao_simples: expressao_simples mais_menos_or • termo

    ABRE_PARENTESES  shift, and go to state 78
    IDENT            shift, and go to state 28
    NOT              shift, and go to state 79
    NUMERO           shift, and go to state 80
    VALOR_BOOL       shift, and go to state 81

    termo     go to state 92
    fator     go to state 83
    variavel  go to state 84


State 78

   65 fator: ABRE_PARENTESES • expressao FECHA_PARENTESES

    MENOS  shift, and go to state 52
    MAIS   shift, and go to state 53

    $default  reduce using rule 53 (mais_menos_ou_nada)

    expressao           go to state 93
    expressao_simples   go to state 55
    mais_menos_ou_nada  go to state 56


State 79

   66 fator: NOT • fator

    ABRE_PARENTESES  shift, and go to state 78
    IDENT            shift, and go to state 28
    NOT              shift, and go to state 79
    NUMERO           shift, and go to state 80
    VALOR_BOOL       shift, and go to state 81

    fator     go to state 94
    variavel  go to state 84


State 80

   63 fator: NUMERO •

    $default  reduce using rule 63 (fator)


State 81

   64 fator: VALOR_BOOL •

    $default  reduce using rule 64 (fator)


State 82

   50 expressao_simples: mais_menos_ou_nada termo •
   57 termo: termo • vezes_div_and fator

    AND    shift, and go to state 95
    DIV    shift, and go to state 96
    VEZES  shift, and go to state 97

    $default  reduce using rule 50 (expressao_simples)

    vezes_div_and  go to state 98


State 83

   58 termo: fator •

    $default  reduce using rule 58 (termo)


State 84

   62 fator: variavel •

    $default  reduce using rule 62 (fator)


State 85

   29 leitura: READ ABRE_PARENTESES leitura_itens FECHA_PARENTESES •

    $default  reduce using rule 29 (leitura)


State 86

   30 leitura_itens: leitura_itens VIRGULA • item_leitura

    IDENT  shift, and go to state 57

    item_leitura  go to state 99


State 87

   33 escrita: WRITE ABRE_PARENTESES escrita_itens FECHA_PARENTESES •

    $default  reduce using rule 33 (escrita)


State 88

   34 escrita_itens: escrita_itens VIRGULA • item_escrita

    MENOS  shift, and go to state 52
    MAIS   shift, and go to state 53

    $default  reduce using rule 53 (mais_menos_ou_nada)

    item_escrita        go to state 100
    expressao           go to state 62
    expressao_simples   go to state 55
    mais_menos_ou_nada  go to state 56


State 89

   13 declara_var: $@5 lista_id_var DOIS_PONTOS tipo $@6 PONTO_E_VIRGULA •

    $default  reduce using rule 13 (declara_var)


State 90

   40 comando_repetitivo: WHILE $@7 expressao $@8 DO • comando_sem_rotulo

    T_BEGIN  shift, and go to state 23
    IDENT    shift, and go to state 28
    WHILE    shift, and go to state 29
    READ     shift, and go to state 30
    WRITE    shift, and go to state 31

    $default  reduce using rule 28 (comando_sem_rotulo)

    comando_composto    go to state 32
    comando_sem_rotulo  go to state 101
    leitura             go to state 36
    escrita             go to state 37
    atribuicao          go to state 38
    comando_repetitivo  go to state 39
    variavel            go to state 40


State 91

   42 expressao: expressao_simples relacao expressao_simples •
   49 expressao_simples: expressao_simples • mais_menos_or termo

    OR     shift, and go to state 73
    MENOS  shift, and go to state 74
    MAIS   shift, and go to state 75

    $default  reduce using rule 42 (expressao)

    mais_menos_or  go to state 77


State 92

   49 expressao_simples: expressao_simples mais_menos_or termo •
   57 termo: termo • vezes_div_and fator

    AND    shift, and go to state 95
    DIV    shift, and go to state 96
    VEZES  shift, and go to state 97

    $default  reduce using rule 49 (expressao_simples)

    vezes_div_and  go to state 98


State 93

   65 fator: ABRE_PARENTESES expressao • FECHA_PARENTESES

    FECHA_PARENTESES  shift, and go to state 102


State 94

   66 fator: NOT fator •

    $default  reduce using rule 66 (fator)


State 95

   61 vezes_div_and: AND •

    $default  reduce using rule 61 (vezes_div_and)


State 96

   60 vezes_div_and: DIV •

    $default  reduce using rule 60 (vezes_div_and)


State 97

   59 vezes_div_and: VEZES •

    $default  reduce using rule 59 (vezes_div_and)


State 98

   57 termo: termo vezes_div_and • fator

    ABRE_PARENTESES  shift, and go to state 78
    IDENT            shift, and go to state 28
    NOT              shift, and go to state 79
    NUMERO           shift, and go to state 80
    VALOR_BOOL       shift, and go to state 81

    fator     go to state 103
    variavel  go to state 84


State 99

   30 leitura_itens: leitura_itens VIRGULA item_leitura •

    $default  reduce using rule 30 (leitura_itens)


State 100

   34 escrita_itens: escrita_itens VIRGULA item_escrita •

    $default  reduce using rule 34 (escrita_itens)


State 101

   40 comando_repetitivo: WHILE $@7 expressao $@8 DO comando_sem_rotulo •

    $default  reduce using rule 40 (comando_repetitivo)


State 102

   65 fator: ABRE_PARENTESES expressao FECHA_PARENTESES •

    $default  reduce using rule 65 (fator)


State 103

   57 termo: termo vezes_div_and fator •

    $default  reduce using rule 57 (termo)
